--- a/_sass/_appserver-variables.scss
+++ b/_sass/_appserver-variables.scss
@@ -23,4 +23,8 @@ $dropdown-link-hover-bg: $dropdown-bg;
 $dropdown-link-active-color: $navbar-inverse-link-color;
 $dropdown-link-active-bg: $link-color;
 
+// panels
+$panel-primary-heading-bg:#5bc0de;
+$panel-primary-border: #46b8da;
+
 $nav-tabs-active-link-hover-color: $navbar-inverse-bg;
