--- a/_includes/widgets/slider.html
+++ b/_includes/widgets/slider.html
@@ -15,9 +15,12 @@
         {% for slide in page.slider %}
         {% if slide.title %}
         <div class="item {% if forloop.first %}active{% endif %}">
-            <div class="fill" style="background-image:url('{{ slide.img | prepend: site.baseurl }}');opacity:.25;"></div>
+            <div class="fill" style="background-image:url('{{ slide.img | prepend: site.baseurl }}');opacity:.75;"></div>
             <div class="carousel-caption">
                 <h1>{{ slide.title }}</h1><br>
+                {% if slide.countdown %} {% include widgets/countdown.html %} {% endif %}
+                 {% if slide.countdown %}{{ slide.text }}</h2>{% endif %}
+                {% if slide.link-label %}<a href="{{ slide.link-href | prepend: site.baseurl }}" class="btn btn-info-highlight">{{ slide.link-label }}</a>{% endif %}
             </div>
         </div>
         {% endif %}
