--- a/_includes/widgets/feature-box.html
+++ b/_includes/widgets/feature-box.html
@@ -1,7 +1,7 @@
 {% for b in include.box %}
-<div class="col-md-3 img-portfolio">
+<div class="col-md-4 img-portfolio">
     <a href="{{ b.link }}">
-        <img class="img-responsive img-hover" src="{{ b.image }}" alt="">
+        <img class="img-responsive img-hover" src="{{ b.image }}" alt="" style="width:50%">
     </a>
     <h3>
         <a href="{{ b.link }}">{{ b.title }}</a>
