added docs from github wiki to site

--- a/_includes/docs_nav.html
+++ b/_includes/docs_nav.html
@@ -1,4 +1,4 @@
-{% assign items = site.data.[page.subnavigation] %}
+{% assign items = site.docs | sort: 'position' %}
 
 <!-- Navigation -->
 <div class="list-group">
