--- a/_layouts/docs.html
+++ b/_layouts/docs.html
@@ -20,7 +20,7 @@
             
             <div class="row">
                 <div class="col-md-3">
-                    {% include subnavigation.html %}
+                    {% include docs_nav.html %}
                 </div>
                 <!-- Content Section -->
                 <div class="col-md-9">    
