--- a/_layouts/docs.html
+++ b/_layouts/docs.html
@@ -12,7 +12,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12 content">
-                      <h2>{{ page.title }}</h2><hr/>
+                      <h2>{% if page.title != 'Docs'%}<small>Docs / </small>{% endif %}{{ page.title }}</h2><hr/>
                 </div>
             </div>
             
