--- a/_includes/subnavigation.html
+++ b/_includes/subnavigation.html
@@ -3,6 +3,6 @@
 <!-- Navigation -->
 <div class="list-group">
     {% for item in items %}
-        <a href="{{ item.url }}" class="list-group-item">{{ item.title }}</a>
+        <a href="{{ item.url }}" class="list-group-item{% if item.url == page.url %} active{% endif %}">{{ item.title }}</a>
     {% endfor %}  
 </div>
