--- a/_sass/_appserver-variables.scss
+++ b/_sass/_appserver-variables.scss
@@ -2,6 +2,7 @@
 // appserver.io variables for custom colors and more
 // --------------------------------------------------
 $link-color: #31b0d5;
+$brand-primary: #5bc0de !default;
 
 $font-family-base: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif !default;
 $font-size-base: 15px !default;
@@ -24,7 +25,7 @@ $dropdown-link-active-color: $navbar-inverse-link-color;
 $dropdown-link-active-bg: $link-color;
 
 // panels
-$panel-primary-heading-bg:#5bc0de;
+$panel-primary-heading-bg: $brand-primary;
 $panel-primary-border: #46b8da;
 
 $nav-tabs-active-link-hover-color: $navbar-inverse-bg;
