--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -27,7 +27,7 @@
       <div class="social col-md-6 col-xs-7 text-right">
         <ul class="list-inline">
           <li><a href="https://twitter.com/php_appserver" target="_blank"><i class="fa fa-twitter-square fa-2x"></i></a></li>
-          <li><a href="https://www.facebook.com/appserver.io"><i class="fa fa-facebook-square fa-2x"></i></a></li>
+          <li><a href="https://www.facebook.com/appserver.io" target="_blank"><i class="fa fa-facebook-square fa-2x"></i></a></li>
           <li class="row-end"><a href="{{ "/feed.xml" | prepend: site.baseurl }}"><i class="fa fa-rss-square fa-2x"></i></a></li>
         </ul>
         <br>
