--- a/_includes/widgets/download.html
+++ b/_includes/widgets/download.html
@@ -24,7 +24,7 @@
             </p>
             <p>
                 For Mac OS X > 10.8.x we provide a .mpkg file for download that contains the runtime and
-                the distribution. Double-clicking on the `.mpkg` starts and guides you through the installation process.
+                the distribution. Double-click on the `.mpkg` and it will guide you through the installation process.
             </p>
             <a id="btn-download-osx"
                class="btn btn-info btn-lg"
