added blog categories, integrated disqus

--- a/_layouts/news.html
+++ b/_layouts/news.html
@@ -33,17 +33,32 @@
                 <!-- Blog Sidebar Widgets Column -->
                 <div class="col-md-3">
 
-                    <!-- Blog Categories Well -->
+                    <!-- Blog Top Well -->
                     <div class="well">
                         <ul class="list-side-news">
                             <li class="{% if page.title == 'Blog' %}active{% endif %}">
                                 <a href="{{ "/community/blog.html" | prepend: site.baseurl }}">All News</a>
                             </li>
                             <li class="{% if page.title == 'Releases' %}active{% endif %}">
-                                <a href="{{ "/community/releases.html" | prepend: site.baseurl }}">appserver Releases</a>
+                                <a href="{{ "/community/news/categories/release.html" | prepend: site.baseurl }}">appserver Releases</a>
                             </li>
                         </ul>
                         <i class="fa fa-rss"></i> subscribe <a href="{{ "/feed.xml" | prepend: site.baseurl }}">via RSS</a>
+                    </div>
+
+                    <div class="well">
+                        <h4>Categories</h4>
+                        <ul class="list-side-news">
+                        <!-- Blog Categories Well -->
+                        {% for site_category in site.categories %}
+                            {% for tcategory in site.data.categories %}
+                                {% if tcategory.slug == site_category[0] %}
+                                    {% assign category = tcategory %}
+                                {% endif %}
+                            {% endfor %}
+                            <li><a href="{{ "/community/news/categories/" | append: site_category[0] | append: ".html"  | prepend: site.baseurl }}"> {{ category.name }}</a> <small>({{ site_category | last | size }})</small></li>
+                        {% endfor %}
+                        </ul>
                     </div>
 
                     <!-- Blog Recent Releases Well -->
@@ -81,6 +96,8 @@
     <!-- /.container -->
 
     {% include footer.html %}
+
+    {% include disqus.html %}
 
 </body>
 </html>
