--- a/_includes/news_category.html
+++ b/_includes/news_category.html
@@ -26,7 +26,7 @@
     </a>
     {% endif %}
     <hr/>
-    <p>{{ post.content }}</p>
+    {{ post.content }}
     {% if forloop.last == false %}<hr/>{% endif %}
     <p><br/></p>
 </article>    
