--- a/_sass/_appserver-variables.scss
+++ b/_sass/_appserver-variables.scss
@@ -14,6 +14,8 @@ $navbar-inverse-link-active-bg: $navbar-inverse-bg;
 $navbar-inverse-link-hover-color: #aaa;
 $navbar-inverse-link-hover-bg: $navbar-inverse-bg;
 
+$subnavbar-link-color: #FFFFFF;
+
 $dropdown-bg: $navbar-inverse-bg;
 $dropdown-divider-bg: $dropdown-bg;
 $dropdown-border: none;
