enhanced http(s) documentations

--- a/_sass/_appserver-variables.scss
+++ b/_sass/_appserver-variables.scss
@@ -7,6 +7,9 @@ $brand-primary: #5bc0de !default;
 $font-family-base: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif !default;
 $font-size-base: 15px !default;
 
+$code-color: #222222 !default;
+$code-bg: #f4f4f4 !default;
+
 $navbar-inverse-bg: #222222;
 $navbar-inverse-link-color: #fafafa;
 $navbar-inverse-link-active-color: $link-color;;
