--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -7,6 +7,7 @@
 @import "bootstrap";
 @import "syntax/github";
 @import "countdown";
+@import "docs";
 
 // import font
 @import url(http://fonts.googleapis.com/css?family=Open+Sans:400italic,600italic,400,600);
@@ -155,55 +156,6 @@ nav.navbar {
 nav {
   .navbar-brand { height: auto; }
   img { height: 34px; }
-}
-
-.docs-content {
-
-  // inherit table styling for markdown docs table
-  table {
-    @extend .table;
-    @extend .table-bordered;
-    font-size: 14px;
-  }
-
-  h2:before {
-    display: block;
-    content: " ";
-    margin-top: -85px;
-    height: 85px;
-    visibility: hidden;
-  }
-}
-
-.docs_nav {
-
-  a.active {
-    color: $subnavbar-link-color;
-    font-weight: bold;
-  }
-
-  ul {
-    font-size: 14px;
-    margin-top: 10px;
-    margin-bottom: 0;
-    padding-left: 20px;
-
-    a, a:hover, a:active, a:visited {
-      color: $subnavbar-link-color;
-      text-decoration: none;
-    }
-
-    li:before {
-      font-family: 'FontAwesome';
-      content: '\f105';
-      margin: 0 5px 0 -11px;
-      color: #D0EDF6;
-    }
-
-    li {
-      margin: 8px 0;
-    }
-  }
 }
 
 ul.nav li.dropdown:hover ul.dropdown-menu{
