--- a/_layouts/faq.html
+++ b/_layouts/faq.html
@@ -13,7 +13,7 @@
 
             <div class="row">
                 <div class="col-md-3" id="leftCol">
-                    {% assign items = site.docs | sort: 'position' %}
+                    {% assign items = site.faq | sort: 'position' %}
                     {% include sub_nav.html %}
                 </div>
                 <!-- Content Section -->
