--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -176,6 +176,10 @@ ul.nav li.dropdown:hover ul.dropdown-menu{
   padding: 16px 10px;
 }
 
+#leftCol {
+  margin-top: 60px;
+}
+
 .error-404 { font-size: 100px; }
 
 .well {
