--- a/_layouts/tuts.html
+++ b/_layouts/tuts.html
@@ -13,12 +13,12 @@
 
             <div class="row">
                 <div class="col-md-3" id="leftCol">
-                    {% assign items = site.docs | sort: 'position' %}
+                    {% assign items = site.tuts | sort: 'position' %}
                     {% include sub_nav.html %}
                 </div>
                 <!-- Content Section -->
                 <div class="col-md-9 content">
-                    <h2>{% if page.group and page.group != "Community" %}<small>{{ page.group }} / </small>{{ page.title }}{% else %}{{ page.headline }}{% endif %}</h2><hr/>
+                    <h2>{% if page.group and page.group != "Docs" %}<small>{{ page.group }} / </small>{{ page.title }}{% else %}{{ page.headline }}{% endif %}</h2><hr/>
                     <div class="docs-content">
                         {{ content }}
                     </div>
