fixed categories and blog styling

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -18,7 +18,7 @@ layout: news
     <hr>
   </header>
 
-  <article class="post-content">
+  <article class="post-content blog-content">
     {{ content }}
   </article>
 
