--- a/_layouts/news.html
+++ b/_layouts/news.html
@@ -14,7 +14,7 @@
             <div class="row">
 
                 <!-- Blog Entries Column -->
-                <div class="col-md-9">
+                <div class="col-md-9 blog-content">
 
                     {{ content }}
 
