--- a/_layouts/detail.html
+++ b/_layouts/detail.html
@@ -12,18 +12,17 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12 content">
-                      <h2>{{ page.title }}</h2><hr/>
+                    <h1>{{ page.title }}</h1>
+                    <hr/>
                 </div>
             </div>
-            
-            <p><br/></p>
-            
+
             <div class="row">
                 <div class="col-md-3">
                     {% include subnavigation.html %}
                 </div>
                 <!-- Content Section -->
-                <div class="col-md-9">    
+                <div class="col-md-9">
                     {{ content }}
                 </div>
             </div>
