--- a/_layouts/faq.html
+++ b/_layouts/faq.html
@@ -18,7 +18,7 @@
                 </div>
                 <!-- Content Section -->
                 <div class="col-md-9 content">
-                    <h2>{% if page.group and page.group != "Community" %}<small>{{ page.group }} / </small>{{ page.title }}{% else %}{{ page.headline }}{% endif %}</h2><hr/>
+                    <h2><i class="fa fa-question-circle"></i> {% if page.group and page.group != "Community" %}<small>{{ page.group }} / </small>{{ page.title }}{% else %}{{ page.headline }}{% endif %}</h2><hr/>
                     <div class="docs-content">
                         {{ content }}
                     </div>
