--- a/_includes/news_category.html
+++ b/_includes/news_category.html
@@ -4,7 +4,7 @@
     {% endif %}
 {% endfor %}
 
-<h1>{{ category.title }}</h1>
+<h1><i class="fa fa-newspaper-o"></i> {{ category.title }}</h1>
 <hr/>
 
 {% for post in site.categories.[page.category] %}
