--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,7 +4,7 @@ layout: news
 <div class="post">
 
   <header class="post-header">
-    <h1 class="post-title">{{ page.title }}</h1>
+    <h1 class="post-title"><i class="fa fa-tag"></i> {{ page.title }}</h1>
     <p>
       <i class="fa fa-clock-o"></i> Posted on {{ page.date | date_to_string }}
       {% if page.author %} |
