--- a/_layouts/sections.html
+++ b/_layouts/sections.html
@@ -4,7 +4,7 @@
 <body role="document">
     {% include header.html %}
     <!-- Page Content -->
-    <div class="container-page"><br/>{{ content }}</div>
+    <div class="container-page">{{ content }}</div>
     <!-- /.container -->
     {% include footer.html %}
 </body>
