--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -20,6 +20,11 @@ body {
   -webkit-font-smoothing: antialiased;
 }
 
+p:empty {
+    padding: 0;
+    margin: 0;
+}
+
 // inline code
 code {
   padding: 3px 8px;
