--- a/_includes/widgets/download.html
+++ b/_includes/widgets/download.html
@@ -28,8 +28,8 @@
             </p>
             <a id="btn-download-osx"
                class="btn btn-info btn-lg"
-               href="https://github.com/appserver-io/appserver/releases/download/1.0.0-beta4/appserver-dist-1.0.0-beta4.22.mac.x86_64.pkg">
-                <i class="fa fa-download"></i>&nbsp;&nbsp;appserver-dist-1.0.0-beta4.22.mac.x86_64.pkg
+               href="https://github.com/appserver-io/appserver/releases/download/1.0.0-rc1/appserver-dist-1.0.0-rc1.30.mac.x86_64.pkg">
+                <i class="fa fa-download"></i>&nbsp;&nbsp;appserver-dist-1.0.0-rc1.30.mac.x86_64.pkg
             </a>
         </div>
 
@@ -48,8 +48,8 @@
             </p>
             <a id="btn-download-win"
                class="btn btn-info btn-lg"
-               href="https://github.com/appserver-io/appserver/releases/download/1.0.0-beta4/appserver-dist-1.0.0-beta4.39.win.x86.jar">
-                <i class="fa fa-download"></i>&nbsp;&nbsp;appserver-dist-1.0.0-beta4.39.win.x86.jar
+               href="https://github.com/appserver-io/appserver/releases/download/1.0.0-rc1/appserver-dist-1.0.0-rc1.43.win.x86.jar">
+                <i class="fa fa-download"></i>&nbsp;&nbsp;appserver-dist-1.0.0-rc1.43.win.x86.jar
             </a>
         </div>
 
@@ -74,14 +74,14 @@ aptitude install appserver-dist
             </p>
             <a
                class="btn btn-info btn-lg"
-               href="https://github.com/appserver-io/appserver/releases/download/1.0.0-beta4/appserver-runtime-1.0.0-beta2.14.linux.debian.x86_64.deb">
-                <i class="fa fa-download"></i>&nbsp;&nbsp;appserver-runtime-1.0.0-beta2.14.linux.debian.x86_64.deb
+               href="https://github.com/appserver-io/appserver/releases/download/1.0.0-rc1/appserver-runtime-1.0.0-beta3.16.linux.debian.x86_64.deb">
+                <i class="fa fa-download"></i>&nbsp;&nbsp;appserver-runtime-1.0.0-beta3.16.linux.debian.x86_64.deb
             </a>
             <p></p>
             <a id="btn-download-debian"
                class="btn btn-info btn-lg"
-               href="https://github.com/appserver-io/appserver/releases/download/1.0.0-beta4/appserver-dist-1.0.0-beta4.20.linux.debian.x86_64.deb">
-                <i class="fa fa-download"></i>&nbsp;&nbsp;appserver-dist-1.0.0-beta4.20.linux.debian.x86_64.deb
+               href="https://github.com/appserver-io/appserver/releases/download/1.0.0-rc1/appserver-dist-1.0.0-rc1.25.linux.debian.x86_64.deb">
+                <i class="fa fa-download"></i>&nbsp;&nbsp;appserver-dist-1.0.0-rc1.25.linux.debian.x86_64.deb
             </a>
         </div>
 
@@ -96,14 +96,14 @@ aptitude install appserver-dist
             </p>
             <a
                class="btn btn-info btn-lg"
-               href="https://github.com/appserver-io/appserver/releases/download/1.0.0-beta4/appserver-runtime-1.0.0-beta2.22.linux.fedora.x86_64.rpm">
-                <i class="fa fa-download"></i>&nbsp;&nbsp;appserver-runtime-1.0.0-beta2.22.linux.fedora.x86_64.rpm
+               href="https://github.com/appserver-io/appserver/releases/download/1.0.0-rc1/appserver-runtime-1.0.0-beta3.24.linux.fedora.x86_64.rpm">
+                <i class="fa fa-download"></i>&nbsp;&nbsp;appserver-runtime-1.0.0-beta3.24.linux.fedora.x86_64.rpm
             </a>
             <p></p>
             <a id="btn-download-fedora"
                class="btn btn-info btn-lg"
-               href="https://github.com/appserver-io/appserver/releases/download/1.0.0-beta4/appserver-dist-1.0.0-beta4.42.linux.fedora.x86_64.rpm">
-                <i class="fa fa-download"></i>&nbsp;&nbsp;appserver-dist-1.0.0-beta4.42.linux.fedora.x86_64.rpm
+               href="https://github.com/appserver-io/appserver/releases/download/1.0.0-rc1/appserver-dist-1.0.0-rc1.47.linux.fedora.x86_64.rpm">
+                <i class="fa fa-download"></i>&nbsp;&nbsp;appserver-dist-1.0.0-rc1.47.linux.fedora.x86_64.rpm
             </a>
         </div>
 
@@ -120,14 +120,14 @@ aptitude install appserver-dist
             </p>
             <a id=""
                class="btn btn-info btn-lg"
-               href="https://github.com/appserver-io/appserver/releases/download/1.0.0-beta4/appserver-runtime-1.0.0-beta2.24.linux.centos.x86_64.rpm">
-                <i class="fa fa-download"></i>&nbsp;&nbsp;appserver-runtime-1.0.0-beta2.24.linux.centos.x86_64.rpm
+               href="https://github.com/appserver-io/appserver/releases/download/1.0.0-rc1/appserver-runtime-1.0.0-beta3.26.linux.centos.x86_64.rpm">
+                <i class="fa fa-download"></i>&nbsp;&nbsp;appserver-runtime-1.0.0-beta3.26.linux.centos.x86_64.rpm
             </a>
             <p></p>
             <a id="btn-download-centos"
                class="btn btn-info btn-lg"
-               href="https://github.com/appserver-io/appserver/releases/download/1.0.0-beta4/appserver-dist-1.0.0-beta4.28.linux.centos.x86_64.rpm">
-                <i class="fa fa-download"></i>&nbsp;&nbsp;appserver-dist-1.0.0-beta4.28.linux.centos.x86_64.rpm
+               href="https://github.com/appserver-io/appserver/releases/download/1.0.0-rc1/appserver-dist-1.0.0-rc1.32.linux.centos.x86_64.rpm">
+                <i class="fa fa-download"></i>&nbsp;&nbsp;appserver-dist-1.0.0-rc1.32.linux.centos.x86_64.rpm
             </a>
         </div>
 
