refactored sub navigation, redirect integration

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,8 +2,15 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width initial-scale=1">
+  <title>{% if page.title %}{{ page.title }} - {% endif %}{{ site.title }}</title>
 
-  <title>{% if page.title %}{{ page.title }}{% endif %} - {{ site.title }}</title>
+  {% for redirect in site.redirects %}
+  {% if redirect.url == page.url %}
+  <meta http-equiv="refresh" content="0; url={{ redirect.redirect | prepend: site.baseurl }}">
+  <link rel="canonical" href="{{ redirect.redirect | prepend: site.baseurl }}" />
+  {% endif %}
+  {% endfor %}
+
   <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
 
   <link rel="icon" type="image/png" href="/favicon.png">
