--- a/_includes/widgets/download.html
+++ b/_includes/widgets/download.html
@@ -1,13 +1,13 @@
 <ul class="nav nav-tabs nav-justified list-unstyled downloads">
-<li class="active"><a href="#mac-osx" data-toggle="tab"><i class="fa fa-apple"></i> Mac OS X</a>
+<li class="active"><a href="#mac-osx" data-toggle="tab"><i class="fa fa-apple"></i>&nbsp;&nbsp;Mac OS X</a>
     </li>
-    <li class=""><a href="#windows" data-toggle="tab"><i class="fa fa-windows"></i> Windows</a>
+    <li class=""><a href="#windows" data-toggle="tab"><i class="fa fa-windows"></i>&nbsp;&nbsp;Windows</a>
     </li>
-    <li class=""><a href="#debian" data-toggle="tab"><i class="fa fa-linux"></i> Debian</a>
+    <li class=""><a href="#debian" data-toggle="tab"><i class="fa fa-linux"></i>&nbsp;&nbsp;Debian</a>
     </li>
-    <li class=""><a href="#fedora" data-toggle="tab"><i class="fa fa-linux"></i> Fedora</a>
+    <li class=""><a href="#fedora" data-toggle="tab"><i class="fa fa-linux"></i>&nbsp;&nbsp;Fedora</a>
     </li>
-    <li class=""><a href="#cent-os" data-toggle="tab"><i class="fa fa-linux"></i> Cent OS</a>
+    <li class=""><a href="#cent-os" data-toggle="tab"><i class="fa fa-linux"></i>&nbsp;&nbsp;Cent OS</a>
     </li>
     <li class=""><a href="#raspbian" data-toggle="tab">Raspbian</a>
     </li>
