--- a/_layouts/docs.html
+++ b/_layouts/docs.html
@@ -13,7 +13,7 @@
                 </div>
                 <!-- Content Section -->
                 <div class="col-md-9 content">
-                    <h1><i class="fa fa-book"></i> {% if page.group and page.group != "Community" %}<small>{{ page.group }} / </small>{{ page.title }}{% else %}{{ page.headline }}{% endif %}</h1><hr/>
+                    <h1><i class="fa fa-book"></i> {% if page.group and page.group != "Get Started" %}<small>{{ page.group }} / </small>{% endif %}{{ page.title }}</h1><hr/>
                     <div class="docs-content">
                         {{ content }}
                     </div>
