--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -34,6 +34,14 @@ code {
   border-radius: $border-radius-base;
 }
 
+.highlight {
+  padding: 15px 0;
+
+  pre {
+    max-height: 200px;
+  }
+}
+
 .container-page {
   background-color: $body-bg;
   position: relative;
