--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -186,6 +186,10 @@ nav {
   padding: 16px 10px;
 }
 
+.post-content {
+  padding-bottom: 30px;
+}
+
 #leftCol {
   margin-top: 60px;
   margin-bottom: 30px;
