--- a/_includes/widgets/slider.html
+++ b/_includes/widgets/slider.html
@@ -16,10 +16,12 @@
         <div class="item {% if forloop.first %}active{% endif %}">
             <div class="fill" style="background-image:url('{{ slide.img | prepend: site.baseurl }}');opacity:.75;"></div>
             <div class="carousel-caption">
-                <h1>{{ slide.title }}</h1><br>
+                <h1>{{ slide.title }}</h1>
                 {% if slide.countdown %} {% include widgets/countdown.html %} {% endif %}
-                 {% if slide.countdown %}{{ slide.text }}</h2>{% endif %}
-                {% if slide.link-label %}<a href="{{ slide.link-href | prepend: site.baseurl }}" class="btn btn-lg btn-info-highlight">{{ slide.link-label }}</a>{% endif %}
+                {% if slide.text %}{{ slide.text }}<br>{% endif %}
+                {% if slide.link-label %}<a href="{{ slide.link-href | prepend: site.baseurl }}" class="btn btn-lg btn-info-highlight"><i class="fa fa-download fa-lg"></i>&nbsp;&nbsp;{{ slide.link-label }}</a>{% endif %}
+                <br/><br/>
+                <p class="carousel-info">Version {{ site.appserver_version }}&nbsp;&nbsp;·&nbsp;&nbsp;<a href="{{ "/get-started/documentation.html" | prepend: site.baseurl }}" ><i class="fa fa-book"></i> Documentation</a>&nbsp;&nbsp;·&nbsp;&nbsp;<a href="{{ site.github_repository }}"><i class="fa fa-github"></i> Github Project</a></p>
             </div>
         </div>
         {% endif %}
